# VapourSynth-WNNM

./: .gitignore  CMakeLists.txt  pyproject.toml
.github/workflows/: linux-arm64.yml  linux.yml  publish.yml  wheel.yml  windows.yml
